--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ insights and updates on program progress.
               <div class="project-item" id="project-01">
                 <div class="project-image">
                   <img
-                    src="C:\Users\rivai\Downloads\rivaimuhammad.github.io-main\rivaimuhammad.github.io-main\assets\images\projects\1_Fluid Classification.png"
+                    src="./assets/images/projects/1_Fluid Classification.png"
                     alt="Halcyon Theme"
                   />
                 </div>
